--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -2098,8 +2098,6 @@ then {11,99 TRY/Month}*/
 "contact_us_complaint_cellfie" = "Danke, dass Sie uns kontaktiert haben. Ihre Anfrage wurde zur Überprüfung an Cellfie Mobile weitergeleitet. Wir werden mit ihnen alle notwendigen Informationen teilen, die Sie zur Verfügung stellen, wie Informationen über Ihr Gerät, lifebox-Nutzungsinformationen, Kontaktinformationen und persönliche Informationen, um das Problem zu untersuchen. Fotos/Videos und andere Inhalte, die Sie auf lifebox hochladen, werden nicht mit Cellfire Mobile geteilt.";
 "Office_Filter_Not_Found" = "Die Datei, die Sie zu filtern versucht haben (%@), wurde nicht gefunden.";
 "new_print" = "Neuen Druck Erstellen";
-"print_info_popup_title" = "5 Fotos Auswählen";
-"print_info_popup_subtitle" = "Wählen Sie bis zu 5 Fotos aus, die Sie diesen Monat drucken und sich nach Hause liefern lassen möchten.";
 "print_info_popup_title" = "%d Fotos Auswählen";
 "print_info_popup_subtitle" = "Wählen Sie bis zu %d Fotos aus, die Sie diesen Monat drucken und sich nach Hause liefern lassen möchten.";
 "print_info_popup_checkbox" = "Zeigen Sie diese Warnung nicht mehr an.";
@@ -2128,38 +2126,13 @@ then {11,99 TRY/Month}*/
 "printed_package_view" = "Meine Druckpakete anzeigen";
 "more_photo_right" = "Sie haben mehr als %d Fotos eingereicht. Sind Sie sicher, dass Sie fortfahren möchten?";
 "no_more_photo_right" = "Sie haben mehr als %d Fotos ausgewählt. Reduzieren Sie, um fortzufahren.";
-"timeline_header" = "Die besten Erinnerungen an das Jahr 2023";
+"timeline_header" = "Die besten Erinnerungen an das Jahr %d";
 "timeline_description" = "Wir haben für Sie die besten Erinnerungen an dieses Jahr zusammengestellt. Schau sie dir jetzt an!";
 "selected_for_print" = "Zum Drucken ausgewählt";
 "print_cancel_popup_question" = "Sind Sie sicher, dass Sie abbrechen möchten?";
 "print_cancel_popup_info" = "Alle Fotobearbeitungen, die Sie für das gedruckte Album ausgewählt haben, werden gelöscht. Sie müssen die Fotos erneut auswählen und bearbeiten.";
 "no_right_print_popup_title" = "Sie haben Ihr Recht zum Drucken genutzt";
 "no_right_print_popup_info" = "Sie haben das in Ihrem Paket enthaltene Recht zum Fotodruck genutzt. Wenn Ihr Paket erneuert wird, können Sie Ihre Fotos erneut zum Drucken einsenden.";
-"send_print_button" = "";
-"add_address" = "";
-"send_print_popup_title" = "";
-"send_print_popup_address" = "";
-"send_print_popup_info" = "";
-"address_title" = "";
-"address_city" = "";
-"address_district" = "";
-"address_neighbourhood" = "";
-"address_street" = "";
-"address_building_no" = "";
-"address_apartment_no" = "";
-"address_postacode" = "";
-"add_saved_my_address" = "";
-"save_address" = "";
-"update_address" = "";
-"use_address" = "";
-"change_address" = "";
-"sent_print_info_popup_title" = "";
-"sent_print_info_popup_body" = "";
-"address_title_placeholder" = "";
-"select_city_district" = "";
-"send_print_popup_no_address" = "";
-"grace_banner_text_paycell" = "";
-"toast_message_delete_notification" = "Dieser Vorgang kann je nach Anzahl der ausgewählten Dateien einige Zeit in Anspruch nehmen.";
 "send_print_button" = "Zum Drucken Senden";
 "add_address" = "Adresse Hinzufügen";
 "send_print_popup_title" = "Ihre ausgewählten Fotos sind bereit zum Drucken";
@@ -2215,19 +2188,19 @@ then {11,99 TRY/Month}*/
 "print_page_name" = "Mein Druckpaket";
 "foryou_print_title" = "Drucken Sie Ihre Fotos";
 "foryou_print_body" = "Drucken Sie jeden Monat %d Fotos.";
-"print_package_title" = "";
+"print_package_title" = "Neuestes Paket";
 "print_package_detail" = "5 Stück 10x15 Fotodrucke";
 "print_package" = "Druck-Paket";
 "print_package_info" = "Fotodruck + Lagerung";
 
 /*4 Ekim - 4 Aralık 2023 mi ... ampanya katilim koşulları*/
 "milli_piyango_katilim_kosullari_2023" = "lifebox'lılar kazanıyor çekiliş kampanyası detayları\n•\tBu kampanya Lifecell Bulut Çözümleri A.Ş.adına MPİ’nin 29.09.2023 tarih ve E- 58259698-255.01.02-44421sayılı izni ile Hedef Çekiliş tarafından düzenlenmektedir. \n•\tKampanya 04.10.2023 (saat 00:01) - 04.12.2023 (saat 23:59) tarihleri arasında Türkiye genelinde Lifecell Bulut Çözümleri A.Ş 'ye ait ait Lifebox Uygulaması kullanımını teşvik etmek amacı ile  iOS veya Androrid sistemli cihazlarına en güncel Lifebox uygulamasını ücretsiz indirerek uygulamaya yeni üye olan veya mevcut üyelere; 532 (ücretsiz) çağrı merkezi numarasını arayarak,  mylifebox.com(ücretsiz) internet sitesi üzerinden üzerinden, turkcell.com.tr(ücretsiz) internet sitesi üzerinden veya 2200 SMS hattına kısa mesaj atarak Lifebox aylık paket alımlarına 1 çekiliş hakkı, Lifebox yıllık paket alımlarına 2 çekiliş hakkı verilecektir. (Kampanya tüm GSM operatörlerinin bireysel hat sahibi olan Lifebox  bireysel üyelerine yönelik olup çekilişe katılmaya hak kazanmak için kampanya tarihleri arasında paketin aktif olması gerekmektedir.) \n•\tTalihliler, 13.12.2023 tarihinde Hedef Çekiliş ve Organizasyon Hizm. Ltd. Şti. (Toplantı Salonu)-Esentepe Mah. Kore Şehitleri Cad. No: 16/1 İç Kapı K8 Şişli/İstanbul adresinde saat 11:00’da noter huzurunda halka açık olarak yapılacak çekilişle belirlenecektir. \n•\tKampanya genelinde yapılacak olan çekilişle,1 kişiye 300.000,00 TL değerinde 1 çift kişilik Başka Türlü Macera Seyahat hediye çeki (Hediye çeki rezervasyon işlemlerinizi https://www.baskaturlumacera.com/siradaki-geziler/ linki üzerinden veya 90 212 251 9447 numara üzerinden ya da Bereketzade Mah. Büyük Hendek Cad. No:17/4 Beyoğlu-İstanbul adresinden işlemler gerçekleştirilebilir. Hediye çeki; tüm yurt dışı turlarında geçerlidir. Adlarına özel tanımlanacak olan Başka Türlü Macera Turizm Ltd. Şti üzerinden İstanbul Kalkışlı yurt dışı münferit uçak biletleri, tüm yurt dışı otel konaklamaları, Yurt dışı paket programları (otel, uçak, transfer şehir içi ve şehirlerarası, Profesyonel Türkçe Rehberlik Hizmetleri, Zorunlu Seyahat sağlık Sigortası, kahvaltı, öğle ve akşam yemekleri, yurt dışı çıkış harcı, vize ücretleri dahildir, pasaport ücreti talihliye aittir.) kategorilerinde kullanılabilecek hediye çeki verilecektir. 15.01.2024 – 22.08.2024 tarihleri arasında geçerlidir.), \n•\t1 kişiye 43.999,00 TL değerinde Apple Iphone 14 128 GB, \n•\t1 kişiye 26.658,76 TL değerinde Sony Playstation 5 PS5 Oyun Konsolu+2 Dualsence Kol , \n•\t1 kişiye 12.000,00 TL değerinde Tatilsepeti Kapadokya Seyahat Çeki (adlarına özel tanımlanacak olan, 444 44 20 çağrı merkezlerimiz üzerinden sadece Kapadokya kültür  Turları için kullanılmak üzere sınırlı 15.01.2024 – 22.08.2024 tarihleri arasında geçerli 12.000TL tutarında 1 çift kişilik hediye çeki),\n•\t1 kişiye 10.499,00 TL değerinde Apple Watch SE 44 MM ikramiyesi verilecektir. \n•\tİkramiye kazanan talihliler, 15.12.2023 tarihli Takvim Gazetesi’nde ilan edilecektir. Kampanya tüm GSM operatörlerinin bireysel tarifeli hat sahibi olan Lifebox bireysel uygulaması üyelerine yönelik olup çekilişe katılmaya hak kazanmak için kampanya tarihleri arasında paketin aktif olması gerekmektedir.532 çağrı merkezi araması ücretsizdir. Kampanya hat sahipleri için geçerli olup ikramiye tesliminde kazanan kişinin hat sahibi olduğu konusunda belge ibrazı zorunludur. Kısa mesaj ile Turkcell, Türk Telekom, Vodafone operatörlerinin tüm aboneleri, 2200 SMS göndererek Lifebox paket alımı yapabilir. Kısa mesaj ile başarılı ya da hatalı tüm alımlar KDV ve ÖİV dahil; Turkcell aboneleri için 1,99 TL, Türk Telekom aboneleri için 1,00 TL, Vodafone aboneleri için 0,65 TL olarak katılımcıya ücretlendirilir. Operatörlerin katılım mesajı birim fiyatlarında değişiklik hakkı saklıdır. Kampanya tarihleri arasında paket değişikliğine gidilmesi durumunda, son geçerli paketi üzerinden çekiliş hakkı verilecektir. Kampanya bitiş tarih ve saatinden itibarinden 48 saat içerisinde paket iptali yapılması halinde çekiliş hakkı iptal edilecektir. Tüm katılımlarda Ad-Soyad ve telefon no bilgilerinden herhangi birinin eksik olması halinde çekiliş hakkı verilmeyecektir. Katılımcının ikramiye kazanması durumunda adres bilgileri, eksik veya bilinmiyor ise gazetede yapılan ilan tebliğ için yeterli olacaktır. Seyahat çeki ikramiyesini talihliden başkası kullanamaz, nakde çevrilemez veya devredilemez. Bir kişi birden fazla ikramiye kazanamaz. Lifecell Bulut Çözümleri A.Ş. ve Hedef Çekiliş ve Organizasyon Hizmetleri LTD. ŞTİ. çalışanları ile 18 yaşından küçükler düzenlene piyango ve çekilişe katılamaz, katılmış ve kazanmış olsalar dahi ikramiyeleri verilemez. İkramiyeye konu olan eşya ve /veya hizmetin bedeli içinde bulunan KDV+ÖTV gibi vergiler dışındaki vergiler talihliler tarafından ödenecektir.";
-"order_not_found" = "";
-"order_file_not_found" = "";
-"order_uuid_list_empty" = "";
-"download_url_not_found" = "";
-"print_package_not_found" = "";
-"print_limit_exceeded_error" = "";
-"print_file_limit_exceeded_error" = "";
-"order_not_delivered" = "";
-"order_not_delivered_detail" = "";
+"order_not_found" = "Bestellung nicht gefunden.";
+"order_file_not_found" = "Kein Foto gefunden.";
+"order_uuid_list_empty" = "Die Liste der bestellten Fotos ist leer.";
+"download_url_not_found" = "Keine URL für Foto-Download gefunden.";
+"print_package_not_found" = "Druckpaket nicht gefunden.";
+"print_limit_exceeded_error" = "Das Drucklimit für Fotos wurde überschritten.";
+"print_file_limit_exceeded_error" = "Das Limit für den Fotodruck wurde überschritten.";
+"order_not_delivered" = "Bestellung konnte nicht zum Druck übertragen werden";
+"order_not_delivered_detail" = "Ihre Bestellung konnte aus technischen Gründen nicht zum Druck übertragen werden. Bitte geben Sie einen neuen Druckauftrag auf.";
