--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -2160,8 +2160,6 @@ then {11,99 TRY/Month}*/
 "contact_us_complaint_cellfie" = "Thanks for contacting us. Your request has been forwarded to Cellfie Mobile for review. We will share with them any necessary information you provide, such as information about your device, lifebox usage information, contact information, and personal information to investigate the issue. Photos/videos and other content you upload to lifebox will not be shared with Cellfie Mobile.";
 "Office_Filter_Not_Found" = "The file you tried to filter (%@) was not found.";
 "new_print" = "Create New Print";
-"print_info_popup_title" = "Select 5 Photos";
-"print_info_popup_subtitle" = "Choose up to 5 photos to print this month and have them delivered to your house.";
 "print_info_popup_title" = "Select %d Photos";
 "print_info_popup_subtitle" = "Choose up to %d photos to print this month and have them delivered to your house.";
 "print_info_popup_checkbox" = "Don't show this warning again.";
@@ -2190,38 +2188,13 @@ then {11,99 TRY/Month}*/
 "printed_package_view" = "View My Print Packages";
 "more_photo_right" = "You've got %d more photo submission. Are you sure you want to continue?";
 "no_more_photo_right" = "Has seleccionado más de %d fotos. Reduzca para continuar.";
-"timeline_header" = "The best memories of 2023";
+"timeline_header" = "The best memories of %d";
 "timeline_description" = "We have compiled the best memories of this year for you. Check them out now!";
 "selected_for_print" = "Selected for printing";
 "print_cancel_popup_question" = "Are you sure you want to cancel?";
 "print_cancel_popup_info" = "All photo edits you have selected for the printed album will be deleted. You will need to select and edit photos again.";
 "no_right_print_popup_title" = "You've used your right to print";
 "no_right_print_popup_info" = "You have used the photo printing right included in your package. When your package is renewed, you can send your photos for printing again.";
-"send_print_button" = "";
-"add_address" = "";
-"send_print_popup_title" = "";
-"send_print_popup_address" = "";
-"send_print_popup_info" = "";
-"address_title" = "";
-"address_city" = "";
-"address_district" = "";
-"address_neighbourhood" = "";
-"address_street" = "";
-"address_building_no" = "";
-"address_apartment_no" = "";
-"address_postacode" = "";
-"add_saved_my_address" = "";
-"save_address" = "";
-"update_address" = "";
-"use_address" = "";
-"change_address" = "";
-"sent_print_info_popup_title" = "";
-"sent_print_info_popup_body" = "";
-"address_title_placeholder" = "";
-"select_city_district" = "";
-"send_print_popup_no_address" = "";
-"grace_banner_text_paycell" = "";
-"toast_message_delete_notification" = "This process may take time depending on the number of files selected.";
 "send_print_button" = "Send to Print";
 "add_address" = "Add Address";
 "send_print_popup_title" = "Your Selected Photos Are Ready For Printing";
@@ -2277,19 +2250,19 @@ then {11,99 TRY/Month}*/
 "print_page_name" = "My Print Package";
 "foryou_print_title" = "Print Your Photos";
 "foryou_print_body" = "Print %d photos each month.";
-"print_package_title" = "";
+"print_package_title" = "The Newest Package";
 "print_package_detail" = "5 Piece of 10x15 Photo Print";
 "print_package" = "Print Package";
 "print_package_info" = "Photo Printing + Storage";
 
 /*4 Ekim - 4 Aralık 2023 mi ... ampanya katilim koşulları*/
 "milli_piyango_katilim_kosullari_2023" = "lifebox'lılar kazanıyor çekiliş kampanyası detayları\n•\tBu kampanya Lifecell Bulut Çözümleri A.Ş.adına MPİ’nin 29.09.2023 tarih ve E- 58259698-255.01.02-44421sayılı izni ile Hedef Çekiliş tarafından düzenlenmektedir. \n•\tKampanya 04.10.2023 (saat 00:01) - 04.12.2023 (saat 23:59) tarihleri arasında Türkiye genelinde Lifecell Bulut Çözümleri A.Ş 'ye ait ait Lifebox Uygulaması kullanımını teşvik etmek amacı ile  iOS veya Androrid sistemli cihazlarına en güncel Lifebox uygulamasını ücretsiz indirerek uygulamaya yeni üye olan veya mevcut üyelere; 532 (ücretsiz) çağrı merkezi numarasını arayarak,  mylifebox.com(ücretsiz) internet sitesi üzerinden üzerinden, turkcell.com.tr(ücretsiz) internet sitesi üzerinden veya 2200 SMS hattına kısa mesaj atarak Lifebox aylık paket alımlarına 1 çekiliş hakkı, Lifebox yıllık paket alımlarına 2 çekiliş hakkı verilecektir. (Kampanya tüm GSM operatörlerinin bireysel hat sahibi olan Lifebox  bireysel üyelerine yönelik olup çekilişe katılmaya hak kazanmak için kampanya tarihleri arasında paketin aktif olması gerekmektedir.) \n•\tTalihliler, 13.12.2023 tarihinde Hedef Çekiliş ve Organizasyon Hizm. Ltd. Şti. (Toplantı Salonu)-Esentepe Mah. Kore Şehitleri Cad. No: 16/1 İç Kapı K8 Şişli/İstanbul adresinde saat 11:00’da noter huzurunda halka açık olarak yapılacak çekilişle belirlenecektir. \n•\tKampanya genelinde yapılacak olan çekilişle,1 kişiye 300.000,00 TL değerinde 1 çift kişilik Başka Türlü Macera Seyahat hediye çeki (Hediye çeki rezervasyon işlemlerinizi https://www.baskaturlumacera.com/siradaki-geziler/ linki üzerinden veya 90 212 251 9447 numara üzerinden ya da Bereketzade Mah. Büyük Hendek Cad. No:17/4 Beyoğlu-İstanbul adresinden işlemler gerçekleştirilebilir. Hediye çeki; tüm yurt dışı turlarında geçerlidir. Adlarına özel tanımlanacak olan Başka Türlü Macera Turizm Ltd. Şti üzerinden İstanbul Kalkışlı yurt dışı münferit uçak biletleri, tüm yurt dışı otel konaklamaları, Yurt dışı paket programları (otel, uçak, transfer şehir içi ve şehirlerarası, Profesyonel Türkçe Rehberlik Hizmetleri, Zorunlu Seyahat sağlık Sigortası, kahvaltı, öğle ve akşam yemekleri, yurt dışı çıkış harcı, vize ücretleri dahildir, pasaport ücreti talihliye aittir.) kategorilerinde kullanılabilecek hediye çeki verilecektir. 15.01.2024 – 22.08.2024 tarihleri arasında geçerlidir.), \n•\t1 kişiye 43.999,00 TL değerinde Apple Iphone 14 128 GB, \n•\t1 kişiye 26.658,76 TL değerinde Sony Playstation 5 PS5 Oyun Konsolu+2 Dualsence Kol , \n•\t1 kişiye 12.000,00 TL değerinde Tatilsepeti Kapadokya Seyahat Çeki (adlarına özel tanımlanacak olan, 444 44 20 çağrı merkezlerimiz üzerinden sadece Kapadokya kültür  Turları için kullanılmak üzere sınırlı 15.01.2024 – 22.08.2024 tarihleri arasında geçerli 12.000TL tutarında 1 çift kişilik hediye çeki),\n•\t1 kişiye 10.499,00 TL değerinde Apple Watch SE 44 MM ikramiyesi verilecektir. \n•\tİkramiye kazanan talihliler, 15.12.2023 tarihli Takvim Gazetesi’nde ilan edilecektir. Kampanya tüm GSM operatörlerinin bireysel tarifeli hat sahibi olan Lifebox bireysel uygulaması üyelerine yönelik olup çekilişe katılmaya hak kazanmak için kampanya tarihleri arasında paketin aktif olması gerekmektedir.532 çağrı merkezi araması ücretsizdir. Kampanya hat sahipleri için geçerli olup ikramiye tesliminde kazanan kişinin hat sahibi olduğu konusunda belge ibrazı zorunludur. Kısa mesaj ile Turkcell, Türk Telekom, Vodafone operatörlerinin tüm aboneleri, 2200 SMS göndererek Lifebox paket alımı yapabilir. Kısa mesaj ile başarılı ya da hatalı tüm alımlar KDV ve ÖİV dahil; Turkcell aboneleri için 1,99 TL, Türk Telekom aboneleri için 1,00 TL, Vodafone aboneleri için 0,65 TL olarak katılımcıya ücretlendirilir. Operatörlerin katılım mesajı birim fiyatlarında değişiklik hakkı saklıdır. Kampanya tarihleri arasında paket değişikliğine gidilmesi durumunda, son geçerli paketi üzerinden çekiliş hakkı verilecektir. Kampanya bitiş tarih ve saatinden itibarinden 48 saat içerisinde paket iptali yapılması halinde çekiliş hakkı iptal edilecektir. Tüm katılımlarda Ad-Soyad ve telefon no bilgilerinden herhangi birinin eksik olması halinde çekiliş hakkı verilmeyecektir. Katılımcının ikramiye kazanması durumunda adres bilgileri, eksik veya bilinmiyor ise gazetede yapılan ilan tebliğ için yeterli olacaktır. Seyahat çeki ikramiyesini talihliden başkası kullanamaz, nakde çevrilemez veya devredilemez. Bir kişi birden fazla ikramiye kazanamaz. Lifecell Bulut Çözümleri A.Ş. ve Hedef Çekiliş ve Organizasyon Hizmetleri LTD. ŞTİ. çalışanları ile 18 yaşından küçükler düzenlene piyango ve çekilişe katılamaz, katılmış ve kazanmış olsalar dahi ikramiyeleri verilemez. İkramiyeye konu olan eşya ve /veya hizmetin bedeli içinde bulunan KDV+ÖTV gibi vergiler dışındaki vergiler talihliler tarafından ödenecektir.";
-"order_not_found" = "";
-"order_file_not_found" = "";
-"order_uuid_list_empty" = "";
-"download_url_not_found" = "";
-"print_package_not_found" = "";
-"print_limit_exceeded_error" = "";
-"print_file_limit_exceeded_error" = "";
-"order_not_delivered" = "";
-"order_not_delivered_detail" = "";
+"order_not_found" = "Order not found.";
+"order_file_not_found" = "Photo not found.";
+"order_uuid_list_empty" = "Order photo list is empty.";
+"download_url_not_found" = "No url for photo download found.";
+"print_package_not_found" = "Print Package not found.";
+"print_limit_exceeded_error" = "Photo print limit exceeded.";
+"print_file_limit_exceeded_error" = "Photo limit exceeded.";
+"order_not_delivered" = "Your order could not be delivered to print";
+"order_not_delivered_detail" = "Your order could not be delivered to print for technical reasons. Please send a new print again.";
