--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -2140,8 +2140,6 @@ then {11,99 TRY/Month}*/
 "contact_us_complaint_cellfie" = "Gracias por contactarnos. Su solicitud ha sido reenviada a Cellfie Mobile para su revisión. Compartiremos con ellos cualquier información necesaria que proporcione, como información sobre su dispositivo, información de uso de lifebox, información de contacto e información personal para investigar el problema. Las fotos/videos y otro contenido que cargue en lifebox no se compartirán con Cellfire Mobile.";
 "Office_Filter_Not_Found" = "El archivo (%@) que ha intentado filtrar no se ha encontrado.";
 "new_print" = "Crea Una Nueva Impresión";
-"print_info_popup_title" = "Seleccionar 5 Fotos";
-"print_info_popup_subtitle" = "Elige hasta 5 fotos para imprimir este mes y recíbelas en tu casa.";
 "print_info_popup_title" = "Seleccionar %d Fotos";
 "print_info_popup_subtitle" = "Elige hasta %d fotos para imprimir este mes y recíbelas en tu casa.";
 "print_info_popup_checkbox" = "No vuelvas a mostrar esta advertencia.";
@@ -2170,38 +2168,13 @@ then {11,99 TRY/Month}*/
 "printed_package_view" = "Ver mis paquetes de impresión";
 "more_photo_right" = "Tienes %d más envío de fotos. ¿Está seguro de que desea continuar?";
 "no_more_photo_right" = "Has seleccionado más de %d fotos. Reduzca para continuar.";
-"timeline_header" = "Los mejores recuerdos de 2023";
+"timeline_header" = "Los mejores recuerdos de %d";
 "timeline_description" = "Hemos recopilado los mejores recuerdos de este año para ti. ¡Compruébalos ahora!";
 "selected_for_print" = "Seleccionado para impresión";
 "print_cancel_popup_question" = "¿Seguro que quieres cancelarlo?";
 "print_cancel_popup_info" = "Se borrarán todas las ediciones de fotos que hayas seleccionado para el álbum impreso. Tendrás que volver a seleccionar y editar las fotos.";
 "no_right_print_popup_title" = "Ha Utilizado su Derecho a Imprimir";
 "no_right_print_popup_info" = "Ha utilizado el derecho de impresión de fotos incluido en su paquete. Cuando se renueve su paquete, puede enviar sus fotos para imprimir nuevamente.";
-"send_print_button" = "";
-"add_address" = "";
-"send_print_popup_title" = "";
-"send_print_popup_address" = "";
-"send_print_popup_info" = "";
-"address_title" = "";
-"address_city" = "";
-"address_district" = "";
-"address_neighbourhood" = "";
-"address_street" = "";
-"address_building_no" = "";
-"address_apartment_no" = "";
-"address_postacode" = "";
-"add_saved_my_address" = "";
-"save_address" = "";
-"update_address" = "";
-"use_address" = "";
-"change_address" = "";
-"sent_print_info_popup_title" = "";
-"sent_print_info_popup_body" = "";
-"address_title_placeholder" = "";
-"select_city_district" = "";
-"send_print_popup_no_address" = "";
-"grace_banner_text_paycell" = "";
-"toast_message_delete_notification" = "Este proceso puede tardar dependiendo del número de archivos seleccionados.";
 "send_print_button" = "Enviar a Imprimir";
 "add_address" = "Añadir Dirección";
 "send_print_popup_title" = "Sus fotos seleccionadas están listas para imprimir";
@@ -2257,19 +2230,19 @@ then {11,99 TRY/Month}*/
 "print_page_name" = "Mi Paquete de Imprimir";
 "foryou_print_title" = "Imprime Tus Fotos";
 "foryou_print_body" = "Imprima %d fotografías cada mes.";
-"print_package_title" = "";
+"print_package_title" = "El Paquete Más Nuevo";
 "print_package_detail" = "5 Pieza de 10x15 Foto Imprimir";
 "print_package" = "Paquete de Imprimir";
 "print_package_info" = "Impresión de Fotos + Almacenamiento";
 
 /*4 Ekim - 4 Aralık 2023 mi ... ampanya katilim koşulları*/
 "milli_piyango_katilim_kosullari_2023" = "lifebox'lılar kazanıyor çekiliş kampanyası detayları\n•\tBu kampanya Lifecell Bulut Çözümleri A.Ş.adına MPİ’nin 29.09.2023 tarih ve E- 58259698-255.01.02-44421sayılı izni ile Hedef Çekiliş tarafından düzenlenmektedir. \n•\tKampanya 04.10.2023 (saat 00:01) - 04.12.2023 (saat 23:59) tarihleri arasında Türkiye genelinde Lifecell Bulut Çözümleri A.Ş 'ye ait ait Lifebox Uygulaması kullanımını teşvik etmek amacı ile  iOS veya Androrid sistemli cihazlarına en güncel Lifebox uygulamasını ücretsiz indirerek uygulamaya yeni üye olan veya mevcut üyelere; 532 (ücretsiz) çağrı merkezi numarasını arayarak,  mylifebox.com(ücretsiz) internet sitesi üzerinden üzerinden, turkcell.com.tr(ücretsiz) internet sitesi üzerinden veya 2200 SMS hattına kısa mesaj atarak Lifebox aylık paket alımlarına 1 çekiliş hakkı, Lifebox yıllık paket alımlarına 2 çekiliş hakkı verilecektir. (Kampanya tüm GSM operatörlerinin bireysel hat sahibi olan Lifebox  bireysel üyelerine yönelik olup çekilişe katılmaya hak kazanmak için kampanya tarihleri arasında paketin aktif olması gerekmektedir.) \n•\tTalihliler, 13.12.2023 tarihinde Hedef Çekiliş ve Organizasyon Hizm. Ltd. Şti. (Toplantı Salonu)-Esentepe Mah. Kore Şehitleri Cad. No: 16/1 İç Kapı K8 Şişli/İstanbul adresinde saat 11:00’da noter huzurunda halka açık olarak yapılacak çekilişle belirlenecektir. \n•\tKampanya genelinde yapılacak olan çekilişle,1 kişiye 300.000,00 TL değerinde 1 çift kişilik Başka Türlü Macera Seyahat hediye çeki (Hediye çeki rezervasyon işlemlerinizi https://www.baskaturlumacera.com/siradaki-geziler/ linki üzerinden veya 90 212 251 9447 numara üzerinden ya da Bereketzade Mah. Büyük Hendek Cad. No:17/4 Beyoğlu-İstanbul adresinden işlemler gerçekleştirilebilir. Hediye çeki; tüm yurt dışı turlarında geçerlidir. Adlarına özel tanımlanacak olan Başka Türlü Macera Turizm Ltd. Şti üzerinden İstanbul Kalkışlı yurt dışı münferit uçak biletleri, tüm yurt dışı otel konaklamaları, Yurt dışı paket programları (otel, uçak, transfer şehir içi ve şehirlerarası, Profesyonel Türkçe Rehberlik Hizmetleri, Zorunlu Seyahat sağlık Sigortası, kahvaltı, öğle ve akşam yemekleri, yurt dışı çıkış harcı, vize ücretleri dahildir, pasaport ücreti talihliye aittir.) kategorilerinde kullanılabilecek hediye çeki verilecektir. 15.01.2024 – 22.08.2024 tarihleri arasında geçerlidir.), \n•\t1 kişiye 43.999,00 TL değerinde Apple Iphone 14 128 GB, \n•\t1 kişiye 26.658,76 TL değerinde Sony Playstation 5 PS5 Oyun Konsolu+2 Dualsence Kol , \n•\t1 kişiye 12.000,00 TL değerinde Tatilsepeti Kapadokya Seyahat Çeki (adlarına özel tanımlanacak olan, 444 44 20 çağrı merkezlerimiz üzerinden sadece Kapadokya kültür  Turları için kullanılmak üzere sınırlı 15.01.2024 – 22.08.2024 tarihleri arasında geçerli 12.000TL tutarında 1 çift kişilik hediye çeki),\n•\t1 kişiye 10.499,00 TL değerinde Apple Watch SE 44 MM ikramiyesi verilecektir. \n•\tİkramiye kazanan talihliler, 15.12.2023 tarihli Takvim Gazetesi’nde ilan edilecektir. Kampanya tüm GSM operatörlerinin bireysel tarifeli hat sahibi olan Lifebox bireysel uygulaması üyelerine yönelik olup çekilişe katılmaya hak kazanmak için kampanya tarihleri arasında paketin aktif olması gerekmektedir.532 çağrı merkezi araması ücretsizdir. Kampanya hat sahipleri için geçerli olup ikramiye tesliminde kazanan kişinin hat sahibi olduğu konusunda belge ibrazı zorunludur. Kısa mesaj ile Turkcell, Türk Telekom, Vodafone operatörlerinin tüm aboneleri, 2200 SMS göndererek Lifebox paket alımı yapabilir. Kısa mesaj ile başarılı ya da hatalı tüm alımlar KDV ve ÖİV dahil; Turkcell aboneleri için 1,99 TL, Türk Telekom aboneleri için 1,00 TL, Vodafone aboneleri için 0,65 TL olarak katılımcıya ücretlendirilir. Operatörlerin katılım mesajı birim fiyatlarında değişiklik hakkı saklıdır. Kampanya tarihleri arasında paket değişikliğine gidilmesi durumunda, son geçerli paketi üzerinden çekiliş hakkı verilecektir. Kampanya bitiş tarih ve saatinden itibarinden 48 saat içerisinde paket iptali yapılması halinde çekiliş hakkı iptal edilecektir. Tüm katılımlarda Ad-Soyad ve telefon no bilgilerinden herhangi birinin eksik olması halinde çekiliş hakkı verilmeyecektir. Katılımcının ikramiye kazanması durumunda adres bilgileri, eksik veya bilinmiyor ise gazetede yapılan ilan tebliğ için yeterli olacaktır. Seyahat çeki ikramiyesini talihliden başkası kullanamaz, nakde çevrilemez veya devredilemez. Bir kişi birden fazla ikramiye kazanamaz. Lifecell Bulut Çözümleri A.Ş. ve Hedef Çekiliş ve Organizasyon Hizmetleri LTD. ŞTİ. çalışanları ile 18 yaşından küçükler düzenlene piyango ve çekilişe katılamaz, katılmış ve kazanmış olsalar dahi ikramiyeleri verilemez. İkramiyeye konu olan eşya ve /veya hizmetin bedeli içinde bulunan KDV+ÖTV gibi vergiler dışındaki vergiler talihliler tarafından ödenecektir.";
-"order_not_found" = "";
-"order_file_not_found" = "";
-"order_uuid_list_empty" = "";
-"download_url_not_found" = "";
-"print_package_not_found" = "";
-"print_limit_exceeded_error" = "";
-"print_file_limit_exceeded_error" = "";
-"order_not_delivered" = "";
-"order_not_delivered_detail" = "";
+"order_not_found" = "Pedido no encontrado.";
+"order_file_not_found" = "Foto no encontrada.";
+"order_uuid_list_empty" = "La lista de fotos del pedido está vacía.";
+"download_url_not_found" = "URL de descarga de fotos no encontrada.";
+"print_package_not_found" = "Imprimir Paquete no encontrado.";
+"print_limit_exceeded_error" = "Se ha superado el límite a imprimir de fotos.";
+"print_file_limit_exceeded_error" = "Límite de fotos excedido.";
+"order_not_delivered" = "El pedido no se ha podido imprimir";
+"order_not_delivered_detail" = "Tu pedido no se ha podido enviar a imprimir por motivos técnicos. Vuelva a enviar una nueva impresión.";
