--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -2138,7 +2138,7 @@ then {11,99 TRY/Month}*/
 "send_print_button" = "Відправити на Друк";
 "add_address" = "Додати Адресу";
 "send_print_popup_title" = "Обрані Вами Фотографії Готові до Друку";
-"send_print_popup_address" = "Роздруковані фотографії будуть безкоштовно надіслані на адресу \"%@ Квартал %@ Вулиця №:%@ Квартира:%@ %@/%@, %d\".";
+"send_print_popup_address" = "Роздруковані фотографії будуть безкоштовно надіслані на адресу \"%@ Квартал %@ №:%@ Квартира:%@ %@/%@, %d\".";
 "send_print_popup_info" = "Після надсилання на друк цей процес не можна скасувати.";
 "address_title" = "Назва Адреси";
 "address_city" = "Город";
@@ -2167,7 +2167,6 @@ then {11,99 TRY/Month}*/
 "order_delivered_cargo" = "Ваше Замовлення Відправлено";
 "order_delivered" = "Ваше Замовлення Доставлено";
 "order_undelivered" = "Не Вдалося Доставити Ваше Замовлення";
-"grace_banner_paycell_text" = "";
 "order_detail_popup_name" = "Відстеження Замовлення на Друк";
 "print_order_number" = "Номер Замовлення: %@";
 "print_cargo_number" = "Номер Доставки Замовлення: %@";
@@ -2206,3 +2205,5 @@ then {11,99 TRY/Month}*/
 "print_file_limit_exceeded_error" = "Перевищено ліміт фотографій.";
 "order_not_delivered" = "Замовлення не вдалося передати на друк";
 "order_not_delivered_detail" = "Ваше замовлення не вдалося передати на друк з технічних причин. Будь ласка, надішліть нове замовлення на друк ще раз.";
+"grace_banner_paycell_text" = "";
+"sync_page_offer_pop_up" = "";
