--- a/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
@@ -499,7 +499,7 @@
 "Successful purchase." = "წარმატებული შენაძენი";
 "Invalid purchase. AppStore does not verify purchase for the given parameters." = "არასწორი შესყიდვა. AppStore არ ამოწმებს შესყიდვას მოცემული პარამეტრებისთვის.";
 "A temporary error has occurred due to technical reasons." = "დროებითი შეცდომა დაფიქსირდა ტექნიკური მიზეზების გამო";
-"Subscription related with this purchase is already activated for another lifebox user. Note that using different lifebox accounts with the same Apple or Google ID might result with this situation." = "ამ შენაძენთან დაკავშირებული გამოწერა უკვე გააქტიურებულია სხვა lifebox მომხმარებლისთვის. გაითვალისწინე, რომ სხვადასხვა lifebox ანგარიშების გამოყენებამ იგივე Apple ან Google ID-ით შეიძლება გამოიწვიოს ეს სიტუაცია.";
+"validate_purchase_already_subscribed_text" = "ამ შენაძენთან დაკავშირებული გამოწერა უკვე გააქტიურებულია სხვა lifebox მომხმარებლისთვის. გაითვალისწინე, რომ სხვადასხვა lifebox ანგარიშების გამოყენებამ იგივე Apple ან Google ID-ით შეიძლება გამოიწვიოს ეს სიტუაცია.";
 "Shows that a response operation is done for the given receipt." = "აჩვენებს, რომ პასუხის ოპერაცია შესრულებულია მოცემულ ქვითარზე.";
 "Auto Upload is off." = "ავტომატური ატვირთვა გამორთულია";
 "Photos and videos waiting to be synced" = "ფოტოები და ვიდეოები სინქრონიზაციის მოლოდინშია";
